# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
#

2006-01-19 11:39:44 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-148

    Summary:
      merge fixes from herve (#256)
    Revision:
      itools--main--0.12--patch-148

    Patches applied:
    
     * herve@oursours.net--public/itools--zope2--0.12--patch-13
       delete obsolete method error_page, the template was already deleted.
    
     * herve@oursours.net--public/itools--zope2--0.12--patch-16
       fix opening the Epoz palette when ui is not at the root.
    
     * herve@oursours.net--public/itools--zope2--0.12--patch-17
       prepare the call of the table helper for the time it will be ready.
    

    modified files:
     Changelog cms/Handler.py cms/WebSite.py cms/ui/epoz.js
     cms/ui/epoz.xml

    new patches:
     herve@oursours.net--public/itools--zope2--0.12--patch-13
     herve@oursours.net--public/itools--zope2--0.12--patch-16
     herve@oursours.net--public/itools--zope2--0.12--patch-17


2006-01-17 17:10:46 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-147

    Summary:
      merge minor improvements to "itools.cms.Folder" from herve
    Revision:
      itools--main--0.12--patch-147

    Patches applied:
    
     * herve@itaapy.com--private/itools--drire-herve--0.12--patch-1
       fixing browse icons rendering.
    
     * herve@itaapy.com--private/itools--drire-herve--0.12--patch-2
       allowing search_handler using handler class.
    
     * herve@itaapy.com--private/itools--drire-herve--0.12--patch-3
       allow more control from browse_namespace.
    
     * herve@itaapy.com--private/itools--drire-herve--0.12--patch-4
       also reading the description in listings.
    
     * herve@itaapy.com--private/itools--drire-herve--0.12--patch-5
       allow browsing a search of your own.
    

    modified files:
     Changelog cms/Folder.py cms/ui/aruni/aruni.css

    new patches: